[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Pages/EntityMenu/ComplexEntityMenu/entitySceneComplexDef.gd" type="Script" id=1]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 50, 50 )

[node name="Area2D" type="Area2D" groups=["entitySceneDef"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0.298039, 1, 0.501961 )
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="posNum" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 2 )
text = "0"

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
